syntax = "proto3";

package questionnaire;

import "google/protobuf/timestamp.proto";

enum actions {
  created = 0;
  modified = 1;
  deleted = 2;
}

message catUsers {
  string id = 1;
  actions action = 2;
  google.protobuf.Timestamp date = 3;
}

message Category {
  string id = 1;
  string name = 2;
  repeated catUsers users = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CategoryMessage {
  int32 code = 1;
  string message = 2;
}

message CategoriesResponse {
  int32 code = 1;
  repeated Category data = 2;
}

message CategoryResponse {
  int32 code = 1;
  Category data = 2;
}

message GetAllCategories { 
  string access_token = 1; 
  map<string, string> request_query = 2;
}

message GetOneCategory { 
  string access_token = 1; 
  string id = 2;
}

message CreateCategory { 
  string access_token = 1; 
  string name = 2;
  string status = 3;
}

message UpdateCategory { 
  string access_token = 1; 
  string name = 2;
  string status = 3;
  string id = 4;
}

message DeleteCategory { 
  string access_token = 1; 
  string id = 2;
}